# summer-school-tutorials

./: .gitignore  tutorial_exercises.ipynb
day2_qms_regs/: QMS_requirements_and_design.ipynb  QMS_runthrough_day2.ipynb  QMS_testing_and_validation.ipynb  conftest.py  pyproject.toml
day2_qms_regs/day2_data/: Makefile
day2_qms_regs/day2_data/data/: device.yml  manual_tests.yml  requirements.yml  risk.yml  versions.yml
day2_qms_regs/day2_data/data_solutions/: device.yml  manual_tests.yml  people.yml  requirements.yml  risk.yml  versions.yml
day2_qms_regs/day2_data/docs/: medical-device-classification.md  system-design-specification.md  system-requirements.md
day2_qms_regs/day2_data/xray/dicom/: AP_1.dcm  AP_2.dcm  AP_3.dcm  CT_1.dcm  MR_1.dcm  Ob_1.dcm  Ob_2.dcm
day2_qms_regs/src/: care_process_diagram.py  conftest.py  constants.py  handosteo.py  notebook_helpers.py  test_handosteo.py  traceability.py
day3_data/: Data_exploration_DICOM.ipynb  Data_exploration_DICOM_v2.ipynb
day3_data/lecture2_structured/: Day3_structured_data_tutorial.ipynb  Day3_structured_data_tutorial_noOutputs.ipynb
day3_data/lecture3_DICOM/: Data_exploration_DICOM.ipynb
day3_data/lecture4_text/: day3_anonymisation_tutorial.ipynb  day3_text_tutorial.ipynb  tutorial.ipynb
day4_model_training/: prepare_dataset.py
day4_model_training/2026/: day4_modeltraining_tutorial_complete.ipynb  day4_modeltraining_tutorial_exercises.ipynb  prepare_dataset.py  tutorial_complete.ipynb
day5_evaluation/2026/: PMS_tutorial_complete.ipynb  PMS_tutorial_exercices.ipynb
(+2 files in other folders)
